# fast_api_ilc_suren

./: README.md  items_views.py  main.py  pyproject.toml  requirements.txt
users/: schemas.py  views.py
