[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = "learning project for fastapi mastering using ilcprobes example"
authors = ["Tabakaev Mihail <mihakgma86@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
