[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = "learning project for fastapi mastering using ilcprobes example"
authors = ["Tabakaev Mihail <mihakgma86@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = {extras = ["email"], version = "^2.10.4"}
uvicorn = "^0.34.0"
anyio = "^4.8.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
